--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -115,3 +115,27 @@ table td {
 .last-clicked.error {
   background-color: rgb(248, 248, 146);
 }
+.last-clicked.error:hover {
+  background-color: rgb(206, 206, 123);
+}
+
+.working {
+  background-color: #dfd;
+}
+.working:hover {
+  background-color: #cec;
+}
+
+.working.last-clicked {
+  background-color: rgb(248, 248, 146);
+  
+}
+.working.last-clicked:hover {
+  background-color: rgb(206, 206, 123);
+}
+.last-clicked {
+  font-weight: bold;
+}
+.last-clicked:hover {
+  font-weight: bold;
+}
