--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,68 +6,100 @@
     <button (click)="downloadReviewedState()">Download Reviewed State</button>
     <button (click)="triggerFileInput()">Upload State</button>
     <button (click)="clearState()">Clear State</button>
-    <button [hidden]="isTextExpanded" (click)="isTextExpanded = true">Expand Text</button>
-    <button [hidden]="!isTextExpanded" (click)="isTextExpanded = false">Collapse Text</button>
-    <input type="file" #fileInput style="display:none" (change)="handleFileInput($event)" />
+    <button [hidden]="isTextExpanded" (click)="isTextExpanded = true">
+      Expand Text
+    </button>
+    <button [hidden]="!isTextExpanded" (click)="isTextExpanded = false">
+      Collapse Text
+    </button>
+    <input
+      type="file"
+      #fileInput
+      style="display: none"
+      (change)="handleFileInput($event)"
+    />
   </div>
- 
+<!-- {{tableRows | json}} -->
   <table id="comparisonTable">
     <thead>
       <tr>
-        <th style="width: 10px"> # </th>
+        <th style="width: 10px">#</th>
         <th style="width: 20px">Reviewed</th>
         <th style="width: 20px">Error</th>
         <th style="width: 20px">Action</th>
         <th style="width: 220px">clinCoh url</th>
         <th style="width: 220px">dev url</th>
         <th style="width: 320px">Snapshot</th>
-        <th style="width: 10px"> Fixed </th>
+        <th style="width: 10px">Fixed</th>
         <th>Notes</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let row of tableRows; let i = index" 
-      [ngClass]="{'reviewed': row.reviewed, 'error': row.error, 'last-clicked': row.lastClicked, 'working': row.reviewed && !row.error}"
-         >
-         <!--  -->
-         <!-- <td> {{ row | json}}</td> -->
-          <td>{{i}}</td>
+      <tr
+        *ngFor="let row of tableRows; let i = index"
+        [ngClass]="{
+          reviewed: row.reviewed,
+          error: row.error,
+          'last-clicked': row.lastClicked,
+          working: row.reviewed && !row.error
+        }"
+      >
+        <!--  -->
+        <!-- <td> {{ row | json}}</td> -->
+        <td>{{ i }}</td>
         <td>
-        
-          <input type="checkbox" [(ngModel)]="row.reviewed" 
-                 (click)="$event.stopPropagation()" 
-                 (change)="updateLocalStorage()">
+          <input
+            type="checkbox"
+            [(ngModel)]="row.reviewed"
+            (click)="$event.stopPropagation()"
+            (change)="updateLocalStorage()"
+          />
         </td>
         <td>
-          <input type="checkbox" [(ngModel)]="row.error" 
-                 (click)="$event.stopPropagation()" 
-                 (change)="updateLocalStorage()">
+          <input
+            type="checkbox"
+            [(ngModel)]="row.error"
+            (click)="$event.stopPropagation()"
+            (change)="updateLocalStorage()"
+          />
         </td>
-        <td><button  (click)="onRowClick(row)">load</button></td>
-        <td><a [href]="row.fullUrl1" target="_blank">{{ row.routeName }}</a></td>
-        <td><a [href]="row.fullUrl2" target="_blank">{{ row.routeName }}</a></td>
+        <td><button (click)="onRowClick(row)">load</button></td>
+        <td>
+          <a [href]="row.fullUrl1" [title]="row.fullUrl1" target="_blank">{{ row.routeName ?? row.fullUrl1 }}</a>
+        </td>
+        <td>
+          <a [href]="row.fullUrl2" [title]="row.fullUrl2" target="_blank">{{ row.routeName }}</a>
+        </td>
         <!-- <td><a [href]="row.snapshotFile" target="_blank">{{ row.snapshotFile }}</a></td> -->
         <td>
           <ng-container *ngIf="row.snapshotExists; else noSnapshot">
-            <a [href]="'assets/__diff_output__/' + row.snapshotFile" target="_blank">
+            <a
+              [href]="'assets/__diff_output__/' + row.snapshotFile"
+              target="_blank"
+            >
               {{ row.snapshotFile }}
             </a>
           </ng-container>
-          <ng-template #noSnapshot>
-            None
-          </ng-template>
+          <ng-template #noSnapshot> None </ng-template>
         </td>
         <td>
-          <input [hidden]="!row.error" type="checkbox" [(ngModel)]="row.fixed" 
-                 (click)="$event.stopPropagation()" 
-                 (change)="updateLocalStorage()">
+          <input
+            [hidden]="!row.error"
+            type="checkbox"
+            [(ngModel)]="row.fixed"
+            (click)="$event.stopPropagation()"
+            (change)="updateLocalStorage()"
+          />
         </td>
         <td>
-          <textarea [ngStyle]="{height: isTextExpanded ? '200px' : 'auto' }"
-                    [(ngModel)]="row.notes" 
-                    (click)="$event.stopPropagation()" 
-                    (change)="updateLocalStorage()"
-                    rows="2" cols="20"></textarea>
+          <textarea
+            [ngStyle]="{ height: isTextExpanded ? '200px' : 'auto' }"
+            [(ngModel)]="row.notes"
+            (click)="$event.stopPropagation()"
+            (change)="updateLocalStorage()"
+            rows="2"
+            cols="20"
+          ></textarea>
         </td>
       </tr>
     </tbody>
@@ -82,25 +114,35 @@
     </div>
   </div> -->
 
- <!-- Fixed bottom container for iframes and snapshot image -->
- <div class="bottom-container" >
-  <button [hidden]="isExpanded" (click)="isExpanded = true">expand</button>
-  <button [hidden]="!isExpanded" (click)="isExpanded = false">collapse</button>
-  <div id="viewContainer" [ngStyle]="{height: isExpanded ? '800px' : '300px'}">
-    <div class="frame">
-      <div>{{leftUrl}}</div>
-    <iframe #leftIframe id="left" [src]="leftUrlSafe"></iframe>
-  </div>
-  <div class="frame">
-    <div>{{rightUrl}}</div>
-    <iframe #rightIframe id="right" [src]="rightUrlSafe"></iframe>
-  </div>
-    <div class="frame" id="snapshotContainer">
-      <!-- <img [src]="snapshotFile" alt="Snapshot"> -->
-      <img [src]="'assets/__diff_output__/' + snapshotFile" alt="Snapshot">
+
+  
+
+  <!-- Fixed bottom container for iframes and snapshot image -->
+  <div class="bottom-container">
+    <button [hidden]="isExpanded" (click)="isExpanded = true">expand</button>
+    <button [hidden]="!isExpanded" (click)="isExpanded = false">
+      collapse
+    </button>
+    <button [hidden]="hideImage" (click)="hideImage = true">hide image</button>
+    <button [hidden]="!hideImage" (click)="hideImage = false">show image</button>
+    <div
+      id="viewContainer"
+      [ngStyle]="{ height: isExpanded ? '800px' : '300px' }"
+    >
+      <div class="frame">
+        <div>{{ leftUrl }}</div>
+        <iframe  *ngIf="leftUrl" id="left" [src]="leftUrlSafe"></iframe>
+      </div>
+      <div class="frame">
+        <div>{{ rightUrl }}</div>
+        <iframe  [src]="rightUrlSafe"></iframe>
+      </div>
+        
+      <div class="frame d-flex" [hidden]="hideImage" id="snapshotContainer">
+        <!-- <img [src]="snapshotFile" alt="Snapshot"> -->
+        <img [hidden]="hideImage" [src]="'assets/__diff_output__/' + snapshotFile" alt="Snapshot" />
+      </div>
+     
     </div>
   </div>
-</div>
-
-
 </div>
